# software-distribution-onchain

./: .gitignore  LICENCE  README.md  charles_notes.md  setup.sh
charles-rnd/: package.json  setup.sh  tsconfig.json
charles-rnd/scripts/: addr.sh  deploy.sh
charles-rnd/src/: addresses.ts  apis.ts  deploy.ts  index.ts
charles-rnd/test-contracts/: Cargo.toml  lib.rs
charles-rnd/xcm-contracts/: Cargo.toml  README.md  lib.rs
chopsticks-template/: README.md  package.json
chopsticks-template/configs/: crust-shadow.yml
executable/: .env.example  go.mod  go.sum  main.go
executable/client/: demo_client.go
executable/contract/: test.go
executable/evm_client/: test.go
executable/fingerprint/: fingerprint.go
executable/substrate_client/: test.go
